<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D71B60"
    android:minWidth="250dp"
    android:minHeight="350dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="600dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:alpha="1"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:visibility="visible">

        <EditText
            android:id="@+id/calculo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="#FFFFFFFF"
            android:backgroundTint="#FFFFFFFF"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:hint="@string/calculo"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:shadowColor="#00000000"
            android:text="@string/_0"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:onClick="btnzero"
            android:text="@string/_0"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo"
            app:layout_constraintVertical_bias="0.761" />

        <Button
            android:id="@+id/button1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnone"
            android:text="@string/one"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btntwo"
            android:text="@string/two"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnthree"
            android:text="@string/three"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnfour"
            android:text="@string/four"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnfive"
            android:text="@string/five"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnsix"
            android:text="@string/_6"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnseven"
            android:text="@string/seven"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btneigth"
            android:text="@string/eight"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/button9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnnine"
            android:text="@string/nine"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="228dp"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="428dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:onClick="btnc"
            android:text="@string/borrar"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/division"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btndiv"
            android:text="@string/div"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnpor"
            android:text="@string/multi"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:onClick="btnrest"
            android:text="@string/rest"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo" />

        <Button
            android:id="@+id/plus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="120dp"
            android:fontFamily="monospace"
            android:onClick="btnsuma"
            android:text="@string/plus"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/equal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="428dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:onClick="btnigual"
            android:text="@string/igual"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/pointButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:onClick="btnpoint"
            android:text="@string/point"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo"
            app:layout_constraintVertical_bias="0.761" />

        <Button
            android:id="@+id/plusMinus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="337dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:onClick="btnsigno"
            android:text="@string/mas"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculo"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>